--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <title>sg</title>
     <link rel='stylesheet' type='text/css' href='sg.css'>
-    <script src="//ajax.googleapis.com/ajax/libs/dojo/1.11.2/dojo/dojo.js"></script>
     <script src='sg.js'></script>
   </head>
   <body>
-    <div id='debug'></div>
+    <div id='info'></div>
     <div id='controls'>loading</div>
     <canvas id='canvas'></canvas>
   </body>
