--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <div id='info'></div>
-    <div id='controls'>loading</div>
+    <div id='controls'>
+      <div id='belt'></div>
+      <div id='backpack'></div>
+      <div id='mobiledevice'></div>
+    </div>
     <canvas id='canvas'></canvas>
   </body>
 </html>
