--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <body>
     <div id='info'></div>
     <div id='controls'>
-      <div id='belt'></div>
-      <div id='backpack'></div>
-      <div id='mobiledevice'></div>
+      <div id='sg' class='control-item'></div>
+      <div id='belt' class='control-item'></div>
+      <div id='backpack' class='control-item'></div>
+      <div id='mobiledevice' class='control-item'></div>
     </div>
     <canvas id='canvas'></canvas>
   </body>
