regular update #abillion

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div id='backpack' class='control-item'></div>
       <div id='mobiledevice' class='control-item'></div>
     </div>
+    <div id='changeView'></div>
     <canvas id='canvas'></canvas>
   </body>
 </html>
