--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   </head>
   <body>
     <div id='info'></div>
+    <div id='debug'></div>
     <div id='controls'>
-      <div id='sg' class='control-item'></div>
-      <div id='belt' class='control-item'></div>
-      <div id='backpack' class='control-item'></div>
-      <div id='mobiledevice' class='control-item'></div>
+      <div id='selectGameplay' class='control-item'></div>
+      <div id='selectBelt' class='control-item'></div>
+      <div id='selectBackpack' class='control-item'></div>
+      <div id='selectMobiledevice' class='control-item'></div>
     </div>
-    <div id='changeView'></div>
+    <div id='belt'></div>
+    <div id='backpack'></div>
+    <div id='mobiledevice'></div>
     <canvas id='canvas'></canvas>
   </body>
 </html>
