dom and buttons/controls

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <div id='selectBackpack' class='control-item'></div>
       <div id='selectMobiledevice' class='control-item'></div>
     </div>
-    <div id='belt'></div>
-    <div id='backpack'></div>
-    <div id='mobiledevice'></div>
+    <div id='belt' class='equipment'></div>
+    <div id='backpack' class='equipment'></div>
+    <div id='mobiledevice' class='equipment'></div>
     <canvas id='canvas'></canvas>
   </body>
 </html>
