reg update n23g0e8qwg

--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
       <div id='selectBelt' class='control-item'></div>
       <div id='selectBackpack' class='control-item'></div>
       <div id='selectMobiledevice' class='control-item'></div>
+      <div id='selectStore' class='control-item'></div>
     </div>
-    <div id='belt' class='equipment'></div>
-    <div id='backpack' class='equipment'></div>
-    <div id='mobiledevice' class='equipment'></div>
+    <div id='belt' class='equipment'></div><!-- Belt -->
+    <div id='backpack' class='equipment'><!-- Backpack -->
+      <div id='gear'></div>
+      <div id='seeds'></div>
+    </div>
+    <div id='mobiledevice' class='equipment'><!-- Mobile device -->
+      <div id='md_clock'></div>
+      <div id='md_sleep'></div>
+      <div id='md_money'></div>
+      <div id='md_saveGame'></div>
+      <div id='md_loadGame'></div>
+      <div id='md_options'></div>
+    </div>
+    <div id='store' class='equipment'></div><!-- Store -->
     <canvas id='canvas'></canvas>
   </body>
 </html>
