reg update 1io91h3gqeg

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <div id='selectBackpack' class='control-item'></div>
       <div id='selectMobiledevice' class='control-item'></div>
       <div id='selectStore' class='control-item'></div>
+      <div id='selectAction' class='control-item'></div>
+      <div id='selectItem' class='control-item'></div>
     </div>
     <div id='belt' class='equipment'></div><!-- Belt -->
     <div id='backpack' class='equipment'><!-- Backpack -->
@@ -29,6 +31,8 @@
       <div id='md_options'></div>
     </div>
     <div id='store' class='equipment'></div><!-- Store -->
+    <div id='actions'></div>
+    <div id='items'></div>
     <canvas id='canvas'></canvas>
   </body>
 </html>
