interface, queue stuff

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
       <div id='selectAction' class='control-item'>action</div>
       <div id='selectItem' class='control-item'>item</div>
     </div>
-    <div id='belt' class='equipment'></div><!-- Belt -->
+    <div id='belt' class='equipment'>
+      <div id='belt-inspect' class='belt-slot'></div>
+      <div id='belt-plant' class='belt-slot'></div>
+      <div id='belt-harvest' class='belt-slot'></div>
+      <div id='belt-repel' class='belt-slot'></div>
+      <div id='belt-build' class='belt-slot'></div>
+    </div><!-- Belt -->
     <div id='backpack' class='equipment'><!-- Backpack -->
       <div id='gear'></div>
       <div id='seeds'></div>
@@ -31,8 +37,8 @@
       <div id='md_options'></div>
     </div>
     <div id='store' class='equipment'></div><!-- Store -->
-    <div id='actions'></div>
-    <div id='items'></div>
+    <div id='actions'>actions</div>
+    <div id='items'>items</div>
     <canvas id='canvas'></canvas>
   </body>
 </html>
