--- a/index.html
+++ b/index.html
@@ -29,15 +29,22 @@
       <div id='seeds'></div>
     </div>
     <div id='mobiledevice' class='equipment'><!-- Mobile device -->
-      <div id='md_clock'></div>
-      <div id='md_sleep'></div>
-      <div id='md_money'></div>
-      <div id='md_saveGame'></div>
-      <div id='md_loadGame'></div>
-      <div id='md_options'></div>
+      <div id='md-clock'></div>
+      <div id='md-sleep'></div>
+      <div id='md-money'></div>
+      <div id='md-saveGame'></div>
+      <div id='md-loadGame'></div>
+      <div id='md-options'></div>
     </div>
     <div id='store' class='equipment'></div><!-- Store -->
-    <div id='actions'>actions</div>
+    <div id='actions'>
+      <div id='action-move'>MOVE</div>
+      <div id='action-inspect'>INSPECT</div>
+      <div id='action-plant'>PLANT</div>
+      <div id='action-harvest'>HARVEST</div>
+      <div id='action-build'>BUILD</div>
+      <div id='action-repel'>REPEL</div>
+    </div>
     <div id='items'>items</div>
     <canvas id='canvas'></canvas>
   </body>
