reg update... 12053jt1

--- a/index.html
+++ b/index.html
@@ -36,14 +36,18 @@
       <div id='md-loadGame'></div>
       <div id='md-options'></div>
     </div>
-    <div id='store' class='equipment'></div><!-- Store -->
+    <div id='store' class='equipment'>
+      <div id='store-playersMoney'></div>
+      <div id='store-categorySelect'></div>
+      <div id='store-inventory'></div>
+    </div><!-- Store -->
     <div id='actions'>
-      <div id='action-move'>MOVE</div>
-      <div id='action-inspect'>INSPECT</div>
-      <div id='action-plant'>PLANT</div>
-      <div id='action-harvest'>HARVEST</div>
-      <div id='action-build'>BUILD</div>
-      <div id='action-repel'>REPEL</div>
+      <div id='action-move' class='action-mode'>MOVE</div>
+      <div id='action-inspect' class='action-mode'>INSPECT</div>
+      <div id='action-plant' class='action-mode'>PLANT</div>
+      <div id='action-harvest' class='action-mode'>HARVEST</div>
+      <div id='action-build' class='action-mode'>BUILD</div>
+      <div id='action-repel' class='action-mode'>REPEL</div>
     </div>
     <div id='items'>items</div>
     <canvas id='canvas'></canvas>
