--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div id='debug'></div>
     <div id='controls'>
       <div id='selectGameplay' class='control-item'>sg</div>
-      <div id='selectBelt' class='control-item'>belt</div>
-      <div id='selectBackpack' class='control-item'>bp</div>
-      <div id='selectMobiledevice' class='control-item'>cell</div>
+      <div id='selectBelt' class='control-item'></div>
+      <div id='selectBackpack' class='control-item'></div>
+      <div id='selectMobiledevice' class='control-item'></div>
       <div id='selectStore' class='control-item'>$</div>
       <div id='selectAction' class='control-item'>action</div>
       <div id='selectItem' class='control-item'>item</div>
