--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id='info'></div>
     <div id='debug'></div>
     <div id='controls'>
-      <div id='selectGameplay' class='control-item'>sg</div>
+      <div id='selectGameplay' class='control-item'></div>
       <div id='selectBelt' class='control-item'></div>
       <div id='selectBackpack' class='control-item'></div>
       <div id='selectMobiledevice' class='control-item'></div>
