--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <div id='selectBelt' class='control-item'></div>
       <div id='selectBackpack' class='control-item'></div>
       <div id='selectMobiledevice' class='control-item'></div>
-      <div id='selectStore' class='control-item'>$</div>
-      <div id='selectAction' class='control-item'>action</div>
-      <div id='selectItem' class='control-item'>item</div>
+      <div id='selectStore' class='control-item'></div>
+      <div id='selectAction' class='control-item'></div>
+      <div id='selectItem' class='control-item'></div>
     </div>
     <div id='belt' class='equipment'>
       <div id='belt-inspect' class='belt-slot'></div>
