doghead broken hehe

--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
       <div id='belt-build' class='belt-slot'></div>
     </div><!-- Belt -->
     <div id='backpack' class='equipment'><!-- Backpack -->
-      <div id='gear'></div>
-      <div id='seeds'></div>
+      <div id='backpack-seeds'></div>
+      <div id='backpack-constructables'></div>
+      <div id='backpack-equipment'>
+        <div id='backpack-equipment-inspect'></div>
+        <div id='backpack-equipment-plant'></div>
+        <div id='backpack-equipment-harvest'></div>
+        <div id='backpack-equipment-build'></div>
+        <div id='backpack-equipment-repel'></div>
+        <div id='backpack-equipment-wearable'></div>
+      </div>
     </div>
     <div id='mobiledevice' class='equipment'><!-- Mobile device -->
       <div id='md-clock'></div>
