purchases sort of working

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <div id='selectAction' class='control-item'></div>
       <div id='selectItem' class='control-item'></div>
     </div>
-    <div id='belt' class='equipment'>
+    <div id='belt' class='equipment'><!-- Belt -->
       <div id='belt-inspect' class='belt-slot'></div>
       <div id='belt-plant' class='belt-slot'></div>
       <div id='belt-harvest' class='belt-slot'></div>
       <div id='belt-repel' class='belt-slot'></div>
       <div id='belt-build' class='belt-slot'></div>
-    </div><!-- Belt -->
+    </div>
     <div id='backpack' class='equipment'><!-- Backpack -->
       <div id='backpack-seeds'></div>
       <div id='backpack-constructables'></div>
@@ -44,7 +44,7 @@
       <div id='md-loadGame'></div>
       <div id='md-options'></div>
     </div>
-    <div id='store' class='equipment'>
+    <div id='store' class='equipment'><!-- Store -->
       <div id='store-playersMoney'></div>
       <div id='store-categorySelect'></div>
       <div id='store-inventory'></div>
