some graphics; store stuff

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <div id='selectMobiledevice' class='control-item'></div>
       <div id='selectStore' class='control-item'></div>
       <div id='selectAction' class='control-item'></div>
-      <div id='selectItem' class='control-item'></div>
+      <div id='selectSeed' class='control-item'></div>
+      <div id='selectConstructable' class='control-item'></div>
     </div>
     <div id='belt' class='equipment'><!-- Belt -->
       <div id='belt-inspect' class='belt-slot'></div>
@@ -57,7 +58,8 @@
       <div id='action-build' class='action-mode'>BUILD</div>
       <div id='action-repel' class='action-mode'>REPEL</div>
     </div>
-    <div id='items'>items</div>
+    <div id='seeds'></div>
+    <div id='constructables'></div>
     <canvas id='canvas'></canvas>
   </body>
 </html>
