--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
+<!--    'sg' project v4 ALPHA
+           Joshua A. Lemli
+             Nov 2016            -->
   <head>
+    <meta charset="utf-8">
     <title>sg</title>
     <link rel='stylesheet' type='text/css' href='sg.css'>
     <script src='sg.js'></script>
